--- a/translations/fr/fof-follow-tags.json
+++ b/translations/fr/fof-follow-tags.json
@@ -2,77 +2,77 @@
     "fof-follow-tags": {
         "forum": {
             "settings": {
-                "notify_new_discussion_label": "",
-                "notify_new_post_label": "",
-                "notify_new_discussion_tag_label": ""
+                "notify_new_discussion_label": "Quelqu’un créé une discussion avec une étiquette que je suis",
+                "notify_new_post_label": "Quelqu’un publie un message avec une étiquette que je suis",
+                "notify_new_discussion_tag_label": "Quelqu’un a re-étiquetté une discussion que je suis"
             },
             "index": {
-                "follow_tag_button": "",
-                "unfollow_tag_button": "",
+                "follow_tag_button": "Suivre",
+                "unfollow_tag_button": "Ne plus suivre",
                 "following": {
-                    "following_none_label": "",
-                    "following_tags_label": ""
+                    "following_none_label": "=> fof-follow-tags.ref.filtering_options.none",
+                    "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags"
                 }
             },
             "badge": {
-                "following_tag_tooltip": "",
-                "lurking_tag_tooltip": ""
+                "following_tag_tooltip": "Suivi",
+                "lurking_tag_tooltip": "Caché"
             },
             "sub_controls": {
-                "follow_button": "",
-                "following_button": "",
-                "following_text": "",
-                "hiding_button": "",
-                "hiding_text": "",
-                "ignoring_button": "",
-                "ignoring_text": "",
-                "lurking_button": "",
-                "lurking_text": "",
-                "not_following_button": "",
-                "not_following_text": "",
-                "notify_alert_tooltip": "",
-                "notify_email_tooltip": ""
+                "follow_button": "=> fof-follow-tags.ref.follow",
+                "following_button": "=> fof-follow-tags.ref.following",
+                "following_text": "Soyez informé de toutes les nouvelles discussions.",
+                "hiding_button": "=> fof-follow-tags.ref.hiding",
+                "hiding_text": "Masquer les discussions de la page Toutes les discussions.",
+                "ignoring_button": "=> fof-follow-tags.ref.ignoring",
+                "ignoring_text": "Ne jamais être notifié.",
+                "lurking_button": "=> fof-follow-tags.ref.lurking",
+                "lurking_text": "Soyez informé de toutes les nouvelles discussions et réponses.",
+                "not_following_button": "Ne pas suivre",
+                "not_following_text": "Soyez averti seulement quand vous êtes @mentionné.",
+                "notify_alert_tooltip": "Recevez une notification lorsqu’il y a de nouvelles discussions ou de nouveaux messages",
+                "notify_email_tooltip": "Recevez un e-mail lorsqu’il y a de nouvelles discussions ou de nouveaux messages"
             },
             "notifications": {
-                "new_discussion_text": "",
-                "new_post_text": "",
-                "new_discussion_tag_text": ""
+                "new_discussion_text": "{username} a démarré",
+                "new_post_text": "{username} a publié",
+                "new_discussion_tag_text": "{username} a changé l’étiquette"
             },
             "user": {
                 "settings": {
-                    "heading": "",
-                    "filter_label": ""
+                    "heading": "Suivre les étiquettes",
+                    "filter_label": "Que montrer par défaut dans la page de suivi"
                 }
             }
         },
         "admin": {
             "settings": {
-                "following_page_default_label": "",
-                "following_none_label": "",
-                "following_tags_label": ""
+                "following_page_default_label": "Filtrage par défaut des suivis",
+                "following_none_label": "=> fof-follow-tags.ref.filtering_options.none",
+                "following_tags_label": "=> fof-follow-tags.ref.filtering_options.tags"
             }
         },
         "email": {
             "subject": {
-                "newDiscussionInTag": "",
-                "newPostInTag": "",
-                "newDiscussionTag": ""
+                "newDiscussionInTag": "[Tag | New Discussion] {title}",
+                "newPostInTag": "[Tag | New Post] {title}",
+                "newDiscussionTag": "[Tag | Changed Tag] {title}"
             },
             "body": {
-                "newDiscussionInTag": "",
-                "newPostInTag": "",
-                "newDiscussionTag": ""
+                "newDiscussionInTag": "Hey {recipient_display_name},\n{actor_display_name} a lancé une discussion dans un tag que vous suivez: {discussion_title}\nPour afficher la nouvelle discussion, consultez le lien suivant:\n{discussion_url}\n---\n{post_content}\n",
+                "newPostInTag": "Hey {recipient_display_name},\n{actor_display_name} a publié dans une discussion sur une étiquette que vous suivez: {discussion_title}\nPour voir la nouvelle activité, consultez le lien suivant:\n{post_url}\n---\n{post_content}\n---\nVous ne recevrez plus de notifications concernant cette discussion tant que vous ne serez pas à jour.\n",
+                "newDiscussionTag": "Hey {recipient_display_name},\n{actor_display_name} vient de remplacer l’étiquette d’une discussion de {author_display_name} par une étiquette que vous suivez {discussion_title}\nPour afficher la nouvelle discussion, consultez le lien suivant:\n{discussion_url}\n"
             }
         },
         "ref": {
-            "follow": "",
-            "following": "",
-            "hiding": "",
-            "ignoring": "",
-            "lurking": "",
+            "follow": "Suivre",
+            "following": "Suivie",
+            "hiding": "Cachée",
+            "ignoring": "Ignorée",
+            "lurking": "Observée",
             "filtering_options": {
-                "none": "",
-                "tags": ""
+                "none": "Discussions suivies",
+                "tags": "Étiquettes suivies"
             }
         }
     }
