Importing "fof-formatting" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-formatting.yml".

--- a/translations/fr/fof-formatting.json
+++ b/translations/fr/fof-formatting.json
@@ -2,13 +2,13 @@
     "fof-formatting": {
         "admin": {
             "plugins": {
-                "Autoimage": "",
-                "Autovideo": "",
-                "FancyPants": "",
-                "HTMLEntities": "",
-                "MediaEmbed": "",
-                "PipeTables": "",
-                "TaskLists": ""
+                "Autoimage": "Convertir les URL d’images en images réelles",
+                "Autovideo": "Convertir les URL de vidéos en vidéos lisibles",
+                "FancyPants": "Utilisez une typographie de fantaisie",
+                "HTMLEntities": "Utiliser des entités HTML",
+                "MediaEmbed": "Intégrer du contenu de sites autorisés",
+                "PipeTables": "Tables en ASCII",
+                "TaskLists": "Listes de tâches variées de GitHub/GitLab"
             }
         }
     }
