Importing "fof-frontpage" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-frontpage.yml".

--- a/translations/fr/fof-frontpage.json
+++ b/translations/fr/fof-frontpage.json
@@ -2,19 +2,19 @@
     "core": {
         "forum": {
             "index_sort": {
-                "front_button": ""
+                "front_button": "Page d’accueil"
             },
             "badge": {
-                "frontpage_tooltip": ""
+                "frontpage_tooltip": "Marqué comme page d’accueil"
             },
             "post_controls": {
-                "push_to_front_button": "",
-                "pull_from_front_button": ""
+                "push_to_front_button": "Mettre en page d’accueil",
+                "pull_from_front_button": "Retirer de la page d’accueil"
             }
         },
         "admin": {
             "permissions": {
-                "can_push_to_frontpage_label": ""
+                "can_push_to_frontpage_label": "Peut mettre un sujet en page d’accueil"
             }
         }
     }
