--- a/translations/fr/fof-geoip.json
+++ b/translations/fr/fof-geoip.json
@@ -2,23 +2,23 @@
     "fof-geoip": {
         "admin": {
             "settings": {
-                "title": "",
-                "service_label": "",
-                "service_freegeoip_label": "",
-                "service_freegeoip_description": "",
-                "service_ipstack_label": "",
-                "service_ipstack_description": "",
-                "service_ipdata_label": "",
-                "service_ipdata_description": "",
-                "service_ipapi_label": "",
-                "service_ipapi_description": "",
-                "access_key_label": "",
-                "security_label": ""
+                "title": "FriendsOfFlarum GeoIP",
+                "service_label": "Service",
+                "service_freegeoip_label": "FreeGeoIP",
+                "service_freegeoip_description": "Utilisez <b>https://freegeoip.app/</b> pour récupérer gratuitement jusqu’à 15 000 codes de pays IP par heure.",
+                "service_ipstack_label": "IPStack",
+                "service_ipstack_description": "Utilisez <b>https://ipstack.com</b> pour effectuer jusqu’à 10 000 recherches par mois gratuitement. Les forfaits payants incluent les informations de connexion (FAI, organisation) et le niveau de menace.",
+                "service_ipdata_label": "IPData",
+                "service_ipdata_description": "Utilisez <b>https://ipdata.co</b> pour effectuer gratuitement jusqu’à 1 500 recherches par jour.",
+                "service_ipapi_label": "IP Api",
+                "service_ipapi_description": "Utilisez <b>http://ip-api.com</b> pour effectuer gratuitement jusqu’à 150 recherches par minute. Si vous en faites plus, votre IP peut être mise sur liste noire, après quoi vous pouvez la retirer à cett adresse : <b>http://ip-api.com/docs/unban</b>.",
+                "access_key_label": "Clé d’accès",
+                "security_label": "Module de sécurité (nécessite un professionnel plus)"
             }
         },
         "forum": {
             "alerts": {
-                "ip_copied": ""
+                "ip_copied": "Adresse IP copiée"
             }
         }
     }
