--- a/translations/fr/fof-ignore-users.json
+++ b/translations/fr/fof-ignore-users.json
@@ -2,20 +2,20 @@
     "fof-ignore-users": {
         "admin": {
             "permissions": {
-                "can_not_be_ignored_label": ""
+                "can_not_be_ignored_label": "Ne peut pas être ignoré"
             }
         },
         "forum": {
-            "profile_link": "",
+            "profile_link": "Utilisateurs ignorés",
             "user_controls": {
-                "ignore_button": "",
-                "ignore_confirmation": "",
-                "unignore_button": "",
-                "unignore_confirmation": ""
+                "ignore_button": "Ignorer",
+                "ignore_confirmation": "Êtes-vous sûr de vouloir ignorer cet utilisateur?",
+                "unignore_button": "Ne plus ignorer",
+                "unignore_confirmation": "Êtes-vous sûr de ne plus vouloir ignorer cet utilisateur?"
             },
             "badge": {
-                "user_label": "",
-                "discussion_label": ""
+                "user_label": "Utilisateur ignoré",
+                "discussion_label": "Démarré par un utilisateur ignoré"
             }
         }
     }
