--- a/translations/fr/fof-links.json
+++ b/translations/fr/fof-links.json
@@ -2,33 +2,33 @@
     "fof-links": {
         "admin": {
             "edit_link": {
-                "delete_link_button": "",
-                "delete_link_confirmation": "",
-                "everyone-label": "",
-                "guests-label": "",
-                "internal_link": "",
-                "members-label": "",
-                "open_newtab": "",
-                "submit_button": "",
-                "title": "",
-                "title_label": "",
-                "title_placeholder": "",
-                "icon_label": "",
-                "icon_text": "",
-                "url_label": "",
-                "url_placeholder": "",
-                "visibility": ""
+                "delete_link_button": "Supprimer le lien",
+                "delete_link_confirmation": "Êtes-vous sûr de vouloir supprimer ce lien?",
+                "everyone-label": "Tout le monde",
+                "guests-label": "Invités",
+                "internal_link": "Est-ce un lien Flarum?",
+                "members-label": "Utilisateurs enregistrés",
+                "open_newtab": "Ouvrir le lien dans un nouvel onglet",
+                "submit_button": "=> core.ref.save_changes",
+                "title": "=> fof-links.ref.create_link",
+                "title_label": "=> fof-links.ref.title",
+                "title_placeholder": "=> fof-links.ref.title",
+                "icon_label": "=> core.ref.icon",
+                "icon_text": "=> core.ref.icon_text",
+                "url_label": "=> fof-links.ref.url",
+                "url_placeholder": "=> fof-links.ref.url",
+                "visibility": "Visibilité du lien"
             },
             "links": {
-                "create_button": "",
-                "links": ""
+                "create_button": "=> fof-links.ref.create_link",
+                "links": "=> fof-links.ref.links"
             }
         },
         "ref": {
-            "create_link": "",
-            "links": "",
-            "title": "",
-            "url": ""
+            "create_link": "Créer un lien",
+            "links": "Liens",
+            "title": "Titre",
+            "url": "Url"
         }
     }
 }
