--- a/translations/fr/fof-mason.json
+++ b/translations/fr/fof-mason.json
@@ -2,94 +2,94 @@
     "fof-mason": {
         "forum": {
             "discussion-controls": {
-                "edit-answers": ""
+                "edit-answers": "Editer les champs"
             },
             "answers-modal": {
-                "edit-title": "",
-                "save": ""
+                "edit-title": "Editer les champs pour {title}",
+                "save": "Sauvegarder les champs"
             },
             "post-answers": {
-                "no-answer": ""
+                "no-answer": "Pas de réponse"
             },
             "answers": {
-                "choose-option": "",
-                "no-option-selected": ""
+                "choose-option": "Choisissez une option",
+                "no-option-selected": "Aucune option sélectionnée"
             },
             "tags": {
-                "inadequate-settings": "",
-                "tags-label": ""
+                "inadequate-settings": "Les paramètres d’étiquette ne sont pas configurés correctement. Autorisez jusqu’à une balise principale et secondaire ou désactivez la fonction \"Balises en tant que champs\".\n",
+                "tags-label": "Etiquettes"
             }
         },
         "admin": {
             "buttons": {
-                "new-field": "",
-                "add-field": "",
-                "save-field": "",
-                "delete-field": "",
-                "edit-field": "",
-                "add-answer": "",
-                "save-answer": "",
-                "delete-answer": "",
-                "edit-answer": "",
-                "edit-answer-prompt": "",
-                "show-user-answers": ""
+                "new-field": "Nouveau champ",
+                "add-field": "Ajouter le champ",
+                "save-field": "Enregistrer les modifications de champ",
+                "delete-field": "Supprimer le champ",
+                "edit-field": "Cliquez pour éditer le champ",
+                "add-answer": "Ajouter une réponse",
+                "save-answer": "Enregistrer les modifications de réponse",
+                "delete-answer": "Supprimer la réponse",
+                "edit-answer": "Modifier la réponse",
+                "edit-answer-prompt": "Modifier le contenu partout où il est utilisé",
+                "show-user-answers": "Afficher les réponses non suggérées ({count})"
             },
             "fields": {
-                "add": "",
-                "edit": "",
-                "required": "",
-                "name": "",
-                "name-help": "",
-                "description": "",
-                "description-help": "",
-                "show_when_empty": "",
-                "show_when_empty-help": "",
-                "validation": "",
-                "user_values_allowed": "",
-                "user_values_allowed-help": "",
-                "validation-help": "",
-                "enable-user-values-for-validation": "",
-                "icon": "",
-                "icon-help": "",
-                "icon-preview": "",
-                "save-field-for-answers": "",
-                "is_suggested": "",
-                "new-answer": "",
-                "new-answer-placeholder": ""
+                "add": "Ajouter le champ {field}",
+                "edit": "Editer le champ {field}",
+                "required": "Champs obligatoires",
+                "name": "Nom du champ",
+                "name-help": "L’étiquette de champ visible publiquement (non traduisible).\n",
+                "description": "Description du champ",
+                "description-help": "Une description facultative pour expliquer l’utilisation / la nécessité de ce champ.\n",
+                "show_when_empty": "Montrer quand vide",
+                "show_when_empty-help": "Afficher le champ sur la discussion quand elle n’a pas de réponse",
+                "validation": "Validation des valeurs d’utilisateur",
+                "user_values_allowed": "Valeurs utilisateur autorisées",
+                "user_values_allowed-help": "Si activé, les utilisateurs peuvent ajouter leurs propres valeurs à la place de celles définies par l’administrateur. Ces valeurs seront vérifiées par rapport au paramètre \"Validation\". Si désactivé, ils ne pourront utiliser que les réponses \"suggérées\".\n",
+                "validation-help": "Consultez les <a>règles de validation Laravel</a> supportées. Ex.: \"string|min:5\" ou \"url\".\n",
+                "enable-user-values-for-validation": "Activer les \"valeurs d’utilisateur\" pour configurer les règles de validation",
+                "icon": "Icône",
+                "icon-help": "Affiche une icône devant les valeurs entrées par l’utilisateur. Pour une référence des icônes disponibles, consultez le <a>site FontAwesome</a>. Utilisez le nom complet de la classe d’icônes, y compris le préfixe, par exemple \"fas fa-bolt\"\n",
+                "icon-preview": "Aperçu: {preview}",
+                "save-field-for-answers": "Enregistrez le champ pour ajouter des réponses",
+                "is_suggested": "Proposer une réponse aux utilisateurs",
+                "new-answer": "Nouvelle réponse",
+                "new-answer-placeholder": "Du texte"
             },
             "messages": {
-                "delete-answer-confirmation": "",
-                "delete-field-confirmation": ""
+                "delete-answer-confirmation": "Êtes-vous sûr de vouloir supprimer la réponse \"{content}\" ? Il sera supprimé de toutes les discussions qui l’utilisent. Si vous souhaitez conserver les réponses existantes, désactivez plutôt la suggestion de réponse. Supprimer la réponse?\n",
+                "delete-field-confirmation": "Êtes-vous sûr de vouloir supprimer le champ \"{name}\" ? Le champ et ses réponses seront supprimés de toutes les discussions qui les utilisent. Supprimer le champ?\n"
             },
             "settings": {
-                "fields-section-title": "",
-                "fields-section-title-placeholder": "",
-                "fields-section-title-help": "",
-                "column-count": "",
-                "n-columns": "",
-                "labels-as-placeholders": "",
-                "labels-as-placeholders-help": "",
-                "fields-in-hero": "",
-                "hide-empty-fields-section": "",
-                "hide-empty-fields-section-help": "",
-                "tags-as-field": "",
-                "tags-as-field-help": "",
-                "tags-field-name": "",
-                "tags-field-name-placeholder": ""
+                "fields-section-title": "Titre de la section des champs personnalisés",
+                "fields-section-title-placeholder": "Par défaut, aucun titre ne sera affiché.",
+                "fields-section-title-help": "Les utilisateurs verront ce texte au-dessus des champs personnalisés dans l’éditeur et dans la discussion.\n",
+                "column-count": "Nombre de colonnes lors de l’affichage des champs",
+                "n-columns": "{count} colonnes",
+                "labels-as-placeholders": "Afficher les étiquettes comme espaces réservés dans le formulaire",
+                "labels-as-placeholders-help": "Les champs utiliseront moins d’espace vertical et les icônes ne seront plus affichées. N’oubliez pas que cela peut avoir un impact sur la facilité d’utilisation, en particulier lors de la modification de champs existants.\n",
+                "fields-in-hero": "Afficher les champs dans la bannière de discussion au lieu du premier message",
+                "hide-empty-fields-section": "Masquer le titre et les contrôles lorsque tous les champs sont vides et masqués",
+                "hide-empty-fields-section-help": "Par défaut, si l’utilisateur peut modifier des champs ou si un titre a été défini, la section sera toujours affichée, même si tous les champs sont masqués. Lorsque cette option est activée, la section sera masquée et le bouton \"Éditer les champs\" ne sera disponible que dans le menu déroulant \"Répondre\" lorsque tous les champs seront vides.\n",
+                "tags-as-field": "Afficher les étiquettes comme sélecteur de champ",
+                "tags-as-field-help": "Cela masquera le sélecteur d’étiquettes par défaut et affichera un champ déroulant personnalisé. Cela ne fonctionnera que si vous avez autorisé jusqu’à un tag principal et un tag secondaire!\n",
+                "tags-field-name": "Libellé du champ d’étiquettes",
+                "tags-field-name-placeholder": "=> flagrow-mason.forum.tags.tags-label"
             },
             "titles": {
-                "settings": "",
-                "fields": "",
-                "field-settings": "",
-                "field-answers": ""
+                "settings": "Réglages",
+                "fields": "Champs",
+                "field-settings": "Paramètres de champs",
+                "field-answers": "Réponses de champs"
             },
             "permissions": {
-                "see-own-fields": "",
-                "see-other-fields": "",
-                "fill-fields": "",
-                "update-own-fields": "",
-                "update-other-fields": "",
-                "skip-required-fields": ""
+                "see-own-fields": "Voir les champs sur ses propres discussions existantes",
+                "see-other-fields": "Voir les champs sur toutes les discussions existantes",
+                "fill-fields": "Remplir les champs sur les nouvelles discussions",
+                "update-own-fields": "Mettre à jour les champs de votre propre discussion",
+                "update-other-fields": "Mettre à jour les champs de toute discussion",
+                "skip-required-fields": "Autorisé à ignorer les champs obligatoires"
             }
         }
     }
