--- a/translations/fr/fof-merge-discussions.json
+++ b/translations/fr/fof-merge-discussions.json
@@ -2,35 +2,35 @@
     "fof-merge-discussions": {
         "forum": {
             "modal": {
-                "title": "",
-                "type_target_label": "",
-                "type_target_help_text": "",
-                "type_from_label": "",
-                "type_from_help_text": "",
-                "load_preview_button": "",
-                "submit_button": ""
+                "title": "Fusionner les discussions",
+                "type_target_label": "Fusionner avec moi",
+                "type_target_help_text": "Choisissez une ou plusieurs discussions à fusionner avec <b>{title}</b>.",
+                "type_from_label": "Fusionner cette discussion avec une autre",
+                "type_from_help_text": "Choisissez une discussion pour la fusionner avec <b>{title}</b>.",
+                "load_preview_button": "Aperçu",
+                "submit_button": "=> fof-merge-discussions.ref.merge"
             },
             "discussion": {
-                "merge": ""
+                "merge": "=> fof-merge-discussions.ref.merge"
             },
             "post": {
-                "merged": ""
+                "merged": "Fusion de <b>{count}</b> messages de <i>{titles}</i>.|Fusion de <b>{count}</b> messages de <i>{titles}</i>."
             }
         },
         "admin": {
             "permissions": {
-                "merge_discussions_label": ""
+                "merge_discussions_label": "Fusionner les discussions"
             }
         },
         "api": {
             "error": {
-                "merging_failed": "",
-                "updating_failed": "",
-                "deleting_failed": ""
+                "merging_failed": "Échec de la fusion des discussions.",
+                "updating_failed": "Échec de la mise à jour des détails de la discussion.",
+                "deleting_failed": "Échec de la suppression des discussions vides."
             }
         },
         "ref": {
-            "merge": ""
+            "merge": "Fusionner"
         }
     }
 }
