--- a/translations/fr/fof-moderator-notes.json
+++ b/translations/fr/fof-moderator-notes.json
@@ -2,32 +2,32 @@
     "fof-moderator-notes": {
         "admin": {
             "permissions": {
-                "createnotes": "",
-                "viewnotes": "",
-                "deletenotes": ""
+                "createnotes": "Créer des notes de modérateur",
+                "viewnotes": "Afficher les notes du modérateur",
+                "deletenotes": "Supprimer les notes du modérateur"
             }
         },
         "forum": {
-            "no_content_given": "",
+            "no_content_given": "Une note vide n’est pas autorisée.",
             "moderatorNotes": {
-                "created_text": "",
-                "add_button": "",
-                "create-heading": "",
-                "dismiss_button": "",
-                "input_heading": "",
-                "noNotes": "",
-                "submit_button": "",
-                "delete": "",
-                "confirm": ""
+                "created_text": "{username} a créé cette note le {date}",
+                "add_button": "Nouvelle note",
+                "create-heading": "Créer une nouvelle note de modérateur",
+                "dismiss_button": "Terminé",
+                "input_heading": "Entrez vos notes pour <strong>{username}</strong>",
+                "noNotes": "Il semble qu’il n’y ait aucune note ici.",
+                "submit_button": "Enregistrer la note",
+                "delete": "Supprimer",
+                "confirm": "Voulez-vous vraiment supprimer cette note?"
             },
             "user": {
-                "notes": ""
+                "notes": "Notes du modérateur"
             }
         },
         "api": {
-            "auto_note": "",
-            "auto_note_actor": "",
-            "no_reason_provided": ""
+            "auto_note": "J’ai utilisé FoF Impersonate pour incarner cet utilisateur",
+            "auto_note_actor": "FoF Impersonate a été utilisé pour incarner 'username'",
+            "no_reason_provided": "Aucune raison fournie"
         }
     }
 }
