--- a/translations/fr/fof-pages.json
+++ b/translations/fr/fof-pages.json
@@ -2,45 +2,45 @@
     "fof-pages": {
         "admin": {
             "edit_page": {
-                "content_label": "",
-                "content_placeholder": "",
-                "delete_page_button": "",
-                "delete_page_confirmation": "",
-                "hidden_label": "",
-                "restricted_label": "",
-                "html_label": "",
-                "set_as_home_page_confirmation": "",
-                "slug_label": "",
-                "slug_placeholder": "",
-                "submit_button": "",
-                "title": "",
-                "title_label": "",
-                "title_placeholder": "",
-                "url_label": "",
-                "url_placeholder": ""
+                "content_label": "=> fof-pages.ref.content",
+                "content_placeholder": "=> fof-pages.ref.content",
+                "delete_page_button": "Supprimer la page",
+                "delete_page_confirmation": "Êtes-vous sûr de vouloir supprimer cette page?",
+                "hidden_label": "Enregistrer comme brouillon",
+                "restricted_label": "Restreindre l’accès (configurer les personnes autorisées à accéder dans l’onglet Autorisations)",
+                "html_label": "Activer le HTML",
+                "set_as_home_page_confirmation": "Êtes-vous sûr de vouloir définir cette page comme page d’accueil?",
+                "slug_label": "=> fof-pages.ref.slug",
+                "slug_placeholder": "=> fof-pages.ref.slug",
+                "submit_button": "=> core.ref.save_changes",
+                "title": "=> fof-pages.ref.create_page",
+                "title_label": "=> fof-pages.ref.title",
+                "title_placeholder": "=> fof-pages.ref.title",
+                "url_label": "=> fof-pages.ref.url",
+                "url_placeholder": "=> fof-pages.ref.url"
             },
             "pages": {
-                "create_button": ""
+                "create_button": "=> fof-pages.ref.create_page"
             },
             "pages_list": {
-                "empty_text": "",
-                "title": ""
+                "empty_text": "On dirait qu’il n’y a pas de pages ici..",
+                "title": "=> fof-pages.ref.title"
             },
             "permissions": {
-                "restricted": ""
+                "restricted": "Afficher les pages restreintes"
             },
             "badges": {
-                "hidden": "",
-                "restricted": ""
+                "hidden": "Brouillon",
+                "restricted": "Restreint"
             }
         },
         "ref": {
-            "content": "",
-            "create_page": "",
-            "pages": "",
-            "slug": "",
-            "title": "",
-            "url": ""
+            "content": "Contenu",
+            "create_page": "Créer une page",
+            "pages": "Pages",
+            "slug": "Slug",
+            "title": "Titre",
+            "url": "Lien"
         }
     }
 }
