--- a/translations/fr/fof-pwned-passwords.json
+++ b/translations/fr/fof-pwned-passwords.json
@@ -1,16 +1,16 @@
 {
     "fof-pwned-passwords": {
-        "error": "",
+        "error": "Le mot de passe que vous avez choisi est enregistré dans la base de données Pwned Passwords, veuillez en choisir un autre.",
         "forum": {
             "alert": {
-                "warning": "",
-                "resend_button": "",
-                "sent_message": ""
+                "warning": "Le mot de passe actuel de votre compte est enregistré dans la base de données Pwned Passwords. Nous vous avons envoyé un e-mail de réinitialisation de mot de passe.",
+                "resend_button": "Renvoyer l’e-mail de réinitialisation",
+                "sent_message": "Envoyé"
             }
         },
         "admin": {
-            "enableLoginCheck": "",
-            "enableAdminRevoke": ""
+            "enableLoginCheck": "Activer la vérification du mot de passe lors de la connexion",
+            "enableAdminRevoke": "Révoquer les autorisations des administrateurs pwned"
         }
     }
 }
