--- a/translations/fr/fof-reactions.json
+++ b/translations/fr/fof-reactions.json
@@ -1,55 +1,55 @@
 {
     "fof-reactions": {
         "forum": {
-            "disabled-reaction": "",
-            "warning": "",
-            "notification": "",
+            "disabled-reaction": "Vous ne pouvez pas utiliser cette réaction pour le moment, veuillez actualiser la page",
+            "warning": "Votre réaction a été convertie",
+            "notification": "{username} a réagi avec {reaction} à votre message",
             "settings": {
-                "notify_post_reacted_label": ""
+                "notify_post_reacted_label": "Quelqu’un a réagi à l’un de mes messages"
             },
-            "reacting-own-post": "",
+            "reacting-own-post": "Vous ne pouvez pas réagir à votre propre message",
             "modal": {
-                "title": ""
+                "title": "Réactions"
             },
-            "mod_item": ""
+            "mod_item": "Voir les réactions"
         },
         "admin": {
             "permissions": {
-                "react_posts_label": "",
-                "see_reactions_label": ""
+                "react_posts_label": "Réagir aux messages",
+                "see_reactions_label": "Voir qui a réagi aux messages"
             },
             "page": {
                 "reactions": {
-                    "title": "",
-                    "reactions": "",
-                    "Helptext": "",
+                    "title": "Réactions personnalisées",
+                    "reactions": "Réactions actuelles",
+                    "Helptext": "Indiquez le nom (identifiant) de l’icône emoji ou du font-awesome et sélectionnez le type de votre choix.",
                     "help": {
-                        "display": "",
-                        "identifier": ""
+                        "display": "Afficher",
+                        "identifier": "Identifiant"
                     }
                 },
                 "convert": {
-                    "help": "",
-                    "button": "",
-                    "converting": "",
-                    "converted": ""
+                    "help": "Si vous venez de mettre à jour votre extension, vos réactions devront être converties. Si vous venez d’installer cette extension, vous pouvez ignorer ce message en toute sécurité.",
+                    "button": "Convertir les anciennes réactions",
+                    "converting": "Vos réactions sont en train d’être converties. Actualisez votre site après quelques minutes pour voir le processus terminé. (Le temps de conversion peut prendre un certain temps en fonction du nombre total de réactions)",
+                    "converted": "Les {number} likes ont été convertis avec succès"
                 },
                 "settings": {
-                    "save_settings": "",
+                    "save_settings": "Enregistrer les paramètres",
                     "integrations": {
-                        "legend": "",
-                        "warning": "",
+                        "legend": "Intégrations",
+                        "warning": "Une même réaction <strong>ne peut pas</strong> être convertie en like <strong>et</strong> en vote positif.",
                         "gamification": {
-                            "legend": "",
-                            "upvoteLabel": "",
-                            "upvoteHelptext": "",
-                            "downvoteLabel": "",
-                            "downvoteHelptext": ""
+                            "legend": "Gamification",
+                            "upvoteLabel": "Convertir les réactions en votes positifs",
+                            "upvoteHelptext": "Indiquez l’identifiant de la réaction que vous souhaitez convertir automatiquement en vote positif",
+                            "downvoteLabel": "Convertir les réactions en votes négatifs",
+                            "downvoteHelptext": "Indiquez l’identifiant de la réaction que vous souhaitez convertir automatiquement en vote négatif"
                         },
                         "likes": {
-                            "legend": "",
-                            "Label": "",
-                            "Helptext": ""
+                            "legend": "Likes",
+                            "Label": "Convertir les réactions en likes",
+                            "Helptext": "Entrez l’identifiant de la réaction que vous souhaitez convertir automatiquement en likes"
                         }
                     }
                 }
