Importing "fof-recaptcha" component from "https://raw.githubusercontent.com/rooaaar/lang-french-extended/master/locale/fof-recaptcha.yml".

--- a/translations/fr/fof-recaptcha.json
+++ b/translations/fr/fof-recaptcha.json
@@ -2,21 +2,21 @@
     "fof-recaptcha": {
         "admin": {
             "settings": {
-                "help_text": "",
-                "secret_key_label": "",
-                "site_key_label": "",
-                "type_label": "",
-                "title": ""
+                "help_text": "Obtenez vos informations d’identification Google reCAPTCHA <a>ici</a>.",
+                "secret_key_label": "Clé secrète",
+                "site_key_label": "Clé du site",
+                "type_label": "type de reCAPTCHA",
+                "title": "FriendsOfFlarum reCAPTCHA"
             },
             "permissions": {
-                "post_without_captcha": ""
+                "post_without_captcha": "Créez des messages et des discussions sans captcha"
             }
         },
         "forum": {
-            "error": ""
+            "error": "Une erreur s’est produite lors de la soumission de reCAPTCHA. Réessayer."
         }
     },
     "validation": {
-        "recaptcha": ""
+        "recaptcha": "La validation de reCAPTCHA a échouée."
     }
 }
